# ai-paper-assister

./: .gitignore  AI_manager.py  AI_professor_UI.py  AI_professor_chat.py  LICENSE  README.md  TTS_manager.py  config.py  data_manager.py  download_models.py  main.py  pipeline.py  pyproject.toml  rag_retriever.py  requirements.txt  threads.py
.github/workflows/: publish-to-pypi.yml
PaperCompanion/: AI_manager.py  AI_professor_UI.py  AI_professor_chat.py  config.py  data_manager.py  main.py  paths.py  pipeline.py  rag_retriever.py  threads.py  voice_input.py
PaperCompanion/processor/: extra_info_processor.py  pdf_processor.py  rag_processor.py  tiling_processor.py  translate_processor.py
PaperCompanion/prompt/: question_generation_prompt.txt  summary_generation_prompt.txt
PaperCompanion/ui/: chat_widget.py  markdown_view.py  message_bubble.py  settings_dialog.py  sidebar_widget.py  upload_widget.py
processor/: extra_info_processor.py  json_processor.py  md_processor.py  md_restore_processor.py  rag_processor.py  tiling_processor.py  translate_processor.py
prompt/: ai_character_prompt_keli.txt  ai_character_prompt_leidian.txt  ai_explain_prompt.txt  ai_router_prompt.txt  content_translate_prompt.txt  formula_analysis_prompt.txt  graph_question_generation_prompt.txt  title_translate_prompt.txt
tools/rag_search/: rag.py
ui/: chat_widget.py  markdown_view.py  message_bubble.py  sidebar_widget.py  upload_widget.py
