[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PaperCompanion"
version = "0.1.5"
authors = [
    { name = "Jiucheng Zang", email = "git.jiucheng@gmail.com" }
]
description = "An academic paper reading companion application with AI-powered features for PDF processing, translation, RAG retrieval, Q&A, and voice interaction."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sentence-transformers>=4.1.0",
    "modelscope>=1.4.0",
    "faiss-cpu>=1.7.4",
    "scikit-learn>=1.2.0",
    "langchain>=0.0.300",
    "langchain-community>=0.0.20",
    "langchain-huggingface>=0.0.1",
    "PyQt6>=6.4.0",
    "PyQt6-WebEngine>=6.4.0",
    "markdown>=3.4.1",
    "pymdown-extensions>=10.14.3",
    "zhconv>=1.4.3",
    "openai>=1.75.0",
    "pypdf>=5.4.0",
    "pdf2image>=1.16.0",
    "pytesseract>=0.3.10",
    "Pillow>=11.2.1",
    "langdetect>=1.0.9",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.4.0",
    "magic-pdf>=1.3.5",
    "opencv-python>=4.11.0",
    "ultralytics>=8.3.0",
    "doclayout_yolo==0.0.3",
    "rapid-table<2.0",
    "transformers<4.52",
    "safetensors<0.6",
    "tokenizers<0.22",
    "ftfy>=6.3",
    "dill>=0.4.0",
    "shapely>=2.1.0",
    "pyclipper>=1.3.0",
    "omegaconf>=2.3.0",
]

[project.scripts]
paper-companion = "PaperCompanion.main:main"

[project.urls]
Repository = "https://github.com/zangjiucheng/ai-paper-assister"
Fork = "https://github.com/LYiHub/mad-professor-public"


[tool.hatch.build.targets.wheel]
packages = [
    "PaperCompanion",
    "processor",
    "ui",
]
include = [
    "assets/**/*",
    "font/**/*",
    "prompt/**/*",
]
exclude = [
    "data/*",
    "output/*",
]
